2003-07-25  Sam Steingold  <sds@gnu.org>

	* error.d (check_posfixnum): new function
	* io.d (PPRINT-INDENT): use check_real()
	* lisparit.d (fehler_not_N): replaced with check_number()
	(fehler_not_R): replaced with check_real()
	(fehler_not_F): replaced with check_float()
	(fehler_not_RA): replaced with check_rational()
	(fehler_not_I): replaced with check_integer()
	(to_double, to_int): new functions for modules
	made these changes pervasive in the whole file
	* lispbib.d (fehler_not_R): replaced with check_real()
	(check_posfixnum): declared

2003-07-24  Sam Steingold  <sds@gnu.org>

	* genclisph.d (SAFETY): export
	(type_data_object): fixed (now fixnum() works)
	(svector_): fixed (now TheSvector()->data works)
	(symbolp): uncommented
	(stringp): fixed
	(array_displace_check): replaces iarray_displace_check()
	* dirkey.c (SET-DKEY-VALUE): use array_displace_check() instead
	of iarray_displace_check(); many cosmetic tweaks
	* spvw_debug.d (nobject_out1): handle structures and fpointers

2003-07-23  Sam Steingold  <sds@gnu.org>

	Converted dirkey to a module
	* constobj.d, constpack.d, constsym.d, defs1.lisp, describe.lisp:
	* init.lisp, io.d, lispbibl.d, predtype.d, spvw.d, subr.d:
	* subrkw.d, type.lisp: removed dirkey-specific stuff
	* Makefile.devel (CONFIGURES): added dirkey, oracle, fastcgi
	* configure, makemake.in (--with-dir-key): removed option
	* encoding.d (cslen_f, cstombs_f): new functions that enable
	with_string_0() in modules
	* genclisph.d: enables a LOT of stuff to support dirkey
	* modules/dirkey: new directory

2003-07-23  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (reset): updated the prototype
	* eval.d (reset): accept count arg
	* control.d (UNWIND-TO-DRIVER): use reset() for everything
	* spvw_alloca.d (memfile): updated reset() call
	* spvw_allocate (error_speicher_voll): ditto
	* spvw.d (SP_ueber, STACK_ueber): ditto
	* error.d (INVOKE-DEBUGGER): ditto
	* debug.d (break_driver): ditto

2003-07-23  Sam Steingold  <sds@gnu.org>
